# rpm

./: .gitignore  .tool-versions  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  coverage.json  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  main-validation.yml  pr-validation.yml  publish.yml
docs/: claude-marketplaces-guide.md  configuration.md  creating-manifest-repos.md  creating-packages.md  how-it-works.md  integration-testing.md  lifecycle.md  multi-source-guide.md  pipeline-integration.md  setup-guide.md  version-resolution.md
docs/repo/: README.md  python-support.md
dst/kanon_cli/: __main__.py
dst/kanon_cli/commands/: bootstrap.py  clean.py  install.py  repo.py  validate.py
dst/kanon_cli/core/: bootstrap.py  catalog.py  discover.py  install.py  kanonenv.py
dst/kanon_cli/repo/: git_config.py  git_refs.py  project.py  version_constraints.py  wrapper.py
dst/src/kanon_cli/: constants.py
git-hooks/: pre-push
src/kanon_cli/: __init__.py  cli.py  constants.py  version.py
src/kanon_cli/commands/: clean.py  install.py  repo.py  validate.py
src/kanon_cli/core/: bootstrap.py  catalog.py  install.py  marketplace.py  marketplace_validator.py  xml_validator.py
src/kanon_cli/repo/: __init__.py  color.py  command.py  fetch.py  git_command.py  git_superproject.py  git_trace2_event_log.py  hooks.py  main.py  manifest_xml.py  pager.py  progress.py  project.py  repo  repo_trace.py  ssh.py  version_constraints.py  wrapper.py
src/rpm_cli/: __init__.py  __main__.py  cli.py  version.py
src/rpm_cli/commands/: bootstrap.py  clean.py  configure.py  validate.py
src/rpm_cli/core/: bootstrap.py  catalog.py  clean.py  configure.py  marketplace.py  marketplace_validator.py  rpmenv.py
tests/: conftest.py
tests/functional/: conftest.py  test_clean_lifecycle.py  test_cli_entry_point.py  test_configure_lifecycle.py  test_install_lifecycle.py  test_kanon_repo_cli.py  test_validate_lifecycle.py
tests/integration/: test_ci_validation.py  test_doc_validation.py  test_full_user_journey.py  test_kanon_clean_embedded.py  test_kanon_full_lifecycle.py  test_kanon_install_embedded.py  test_wheel_e2e.py
tests/integration/repo/: test_bug_fixes.py  test_envsubst_integration.py  test_import_functional.py  test_linkfile_exclude_journey.py  test_repo_module_smoke.py  test_repo_pipeline.py  test_repo_run_lifecycle.py  test_repo_sync_lifecycle.py
tests/unit/: test_bootstrap.py  test_catalog.py  test_ci_workflows.py  test_clean.py  test_clean_command.py  test_cli.py  test_configure.py  test_configure_command.py  test_coverage_gaps.py  test_docs_remaining_and_catalog.py  test_install.py  test_install_command.py  test_kanonenv.py  test_marketplace.py  test_marketplace_validator.py  test_pre_push_hook.py  test_pyproject_build_config.py  test_repo_command.py  test_rpmenv.py  test_validate_command.py  test_version.py  test_xml_validator.py
tests/unit/repo/: conftest.py  test_abandon_massive.py  test_branches_coverage.py  test_bug16_nested_var_warning.py  test_bug18_envsubst_double_parse.py  test_bug19_glob_src_error.py  test_bug1_envsubst_malformed_xml.py  test_bug20_glob_dest_file.py  test_bug2_linkfile_errors.py  test_bug6_undefined_env_vars.py  test_bug7_git_ls_remote_retry.py  test_color.py  (+117 more)
(+56 files in other folders)
