[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpm-cli"
version = "0.1.0"
description = "RPM (Repo Package Manager) CLI tool"
requires-python = ">=3.11"
dependencies = [
    "packaging>=23.0",
]

[project.scripts]
rpm = "rpm_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rpm_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/rpm_cli/catalog" = "rpm_cli/catalog"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E731", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: Unit tests -- fast, isolated, no external dependencies",
    "functional: Functional tests -- exercise CLI via subprocess",
]

[tool.coverage.run]
source = ["src/rpm_cli"]
data_file = ".coverage-data/.coverage"

[tool.coverage.report]
show_missing = true
